# Dream-Machine

./: .gitignore  README.md
MCU/: README.md
MCU/SOC_MCU/: DHT22.cpp  DHT22.h
electron/: .gitignore  Dream_Machine_app.service  README.md  index.html  index.js  package.json  run.sh
electron/MCU/SOC_MCU/: FanMonitor.cpp  FanMonitor.h  SOC_MCU.ino
electron/index/: env_info.css  fan.css  index.css  index.html  index.js  index_echarts.js  index_socket.js  io.css  network_status.css  server.css  style.css
server/: .gitignore  Dream_Machine_server.service  README.md  app.py  bark_notify.py  config.py  configuration.cfg  debug_mode.py  log.py  main.py  mcu_serial.py  power_serial.py  pyproject.toml  ups_monitor.py
server/static/: change_password.html  cscs.html  debug.html  loginbk.html  ws.html
server/static/cfg/: cfg.html
server/static/index/: index.css  index.html  index.js
server/static/login/: login.html
server_state_app/: Dream_Machine_state_app.service  README.md  server_state_app.py
