[project]
name = "dream-machine-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-socketio>=5.6.1",
    "flask-sockets>=0.2.1",
    "flask-sqlalchemy>=3.1.1",
    "pexpect>=4.9.0",
    "pyserial>=3.5",
    "requests>=2.32.5",
    "werkzeug>=3.1.8",
]
